Fix overflowing content

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -225,6 +225,11 @@ li.footnote-item:target {
     outline: none;
 }
 
+.popover-content {
+    overflow: auto;
+    max-height: 50vh;
+}
+
 .modal.mb-zoom {
     -webkit-transform: scale(0.1);
     -moz-transform: scale(0.1);
